helm/istio/aac-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aac
  namespace: global
spec:
  hosts:
    - "aac.kube-test.smartcommunitylab.it"
  gateways:
    - global-gateway
  http:
    - route:
      - destination:
          host: aac
          port:
            number: 8080
