helm/istio/api-manager-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-manager
  namespace: istio-system
spec:
  host: api-manager.global.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 9443
      tls:
        mode: SIMPLE
    - port:
        number: 8243
      tls:
        mode: SIMPLE
