helm/istio/api-manager-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apim
  namespace: global
spec:
  hosts:
  - "api.kube-test.smartcommunitylab.it"
  gateways:
  - global-gateway
  http:
  - route:
    - destination:
        host: api-manager.global.svc.cluster.local
        port:
          number: 9443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apim-gw
  namespace: global
spec:
  hosts:
  - "gw.kube-test.smartcommunitylab.it"
  gateways:
  - global-gateway
  http:
  - route:
    - destination:
        host: api-manager.global.svc.cluster.local
        port:
          number: 8243
