helm/istio/cyclotron-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cyclotron
  namespace: global
spec:
  hosts:
    - "cyclotron.config-test.smartcommunitylab.it"
  gateways:
    - global-gateway
  http:
    - route:
      - destination:
          host: cyclotron-site
          port:
            number: 80
