helm/istio/cyclotron-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cyclotron
  namespace: global
spec:
  hosts:
    - "cyclotron.kube-test.smartcommunitylab.it"
  gateways:
    - global-gateway
  http:
  - match:
    - uri:
        prefix: "/api"
    - uri:
        prefix: "/api/"
    rewrite:
      uri: " "
    route:
    - destination:
        host: cyclotron-svc
        port:
          number: 8077
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: cyclotron-site
        port:
          number: 80
