helm/istio/demo-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
  namespace: global
spec:
  hosts:
  - "demo.kube-test.smartcommunitylab.it"
  gateways:
  - global-gateway
  http:
  - route:
    - destination:
        host: httpbin.global.svc.cluster.local
        port:
          number: 8000
