helm/istio/dss-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dss
  namespace: global
spec:
  hosts:
  - "dss.kube-test.smartcommunitylab.it"
  gateways:
  - global-gateway
  http:
  - route:
    - destination:
        host: dss.global.svc.cluster.local
        port:
          number: 9443
