helm/istio/grafana-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: global
spec:
  hosts:
    - "grafana.config-test.smartcommunitylab.it"
  gateways:
    - global-gateway
  http:
    - route:
      - destination:
          host: grafana
