helm/istio/jhub-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jhub
  namespace: global
spec:
  hosts:
  - "jhub.config-test.smartcommunitylab.it"
  gateways:
  - global-gateway
  http:
  - route:
    - destination:
        host: proxy-public.jhub.svc.cluster.local
        port:
          number: 80
