helm/istio/minio-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
  namespace: global
spec:
  hosts:
  - "minio.config-test.smartcommunitylab.it"
  gateways:
  - global-gateway
  http:
  - route:
    - destination:
        host: minio.global.svc.cluster.local
        port:
          number: 9000
