helm/istio/monitoring-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring
  namespace: global
spec:
  hosts:
    - "monitoring.kube-test.smartcommunitylab.it"
  gateways:
    - global-gateway
  http:
    - route:
      - destination:
          host: prometheus-operator-grafana.monitoring.svc.cluster.local
