helm/istio/nifi-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nifi
  namespace: istio-system
spec:
  host: nifi.global.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nifi-simple
  namespace: istio-system
spec:
  host: nifi-simple.global.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
