helm/istio/resource-manager-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: resource-manager
  namespace: global
spec:
  hosts:
  - "rm.kube-test.smartcommunitylab.it"
  gateways:
  - global-gateway
  http:
  - route:
    - destination:
        host: rm-resource-manager.global.svc.cluster.local
        port:
          number: 8080
